--- a/src/app/modules/define-pages/menu-config/menu-config.component.html
+++ b/src/app/modules/define-pages/menu-config/menu-config.component.html
@@ -41,49 +41,83 @@
                 Active
             </div>            
         </div>        
-        <div class="main" *ngFor="let item of DATA; let i = index;">
+        <div class="main" *ngFor="let element of DATA; let i = index;">
                 <div class="child">
-                    <album-edit-input [data]="item.PageTitle" (tried)="getoldvalue($event)" (focusOut)='updateActive("PageTitle",item,$event)'>
-                    </album-edit-input>
+
+                    <mat-form-field>
+                        <input matInput (focusOut)='updateActive("PageTitle",element,$event)' [(ngModel)]="element.PageTitle" [(value)]="element.PageTitle" autocomplete="Off">
+                    </mat-form-field>
+<!-- 
+                    <album-edit-input [data]="element.PageTitle" (tried)="getoldvalue($event)" (focusOut)='updateActive("PageTitle",element,$event)'>
+                    </album-edit-input> -->
                 </div>
                 <div class="child">
-                    <album-edit-input [data]="item.ParentPage" (tried)="getoldvalue($event)" (focusOut)='updateActive("ParentPage",item,$event)'>
-                    </album-edit-input>
+                    <mat-form-field>
+                        <input matInput (focusOut)='updateActive("ParentPage",element,$event)' [(ngModel)]="element.ParentPage" [(value)]="element.ParentPage" autocomplete="Off">
+                    </mat-form-field>
+
+                    <!-- <album-edit-input [data]="element.ParentPage" (tried)="getoldvalue($event)" (focusOut)='updateActive("ParentPage",element,$event)'>
+                    </album-edit-input> -->
                 </div>
                 <div class="child">
-                    <album-edit-input [data]="item.faIcon" (tried)="getoldvalue($event)" (focusOut)='updateActive("faIcon",item,$event)'>
-                    </album-edit-input>
+                    <mat-form-field>
+                        <input matInput (focusOut)='updateActive("faIcon",element,$event)' [(ngModel)]="element.faIcon" [(value)]="element.faIcon" autocomplete="Off">
+                    </mat-form-field>
+
+                    <!-- <album-edit-input [data]="element.faIcon" (tried)="getoldvalue($event)" (focusOut)='updateActive("faIcon",element,$event)'>
+                    </album-edit-input> -->
                 </div>
                 <div class="child">
-                    <album-edit-input [data]="item.link" (tried)="getoldvalue($event)" (focusOut)='updateActive("link",item,$event)'>
-                    </album-edit-input>
+                    <mat-form-field>
+                        <input matInput (focusOut)='updateActive("link",element,$event)' [(ngModel)]="element.link" [(value)]="element.link" autocomplete="Off">
+                    </mat-form-field>
+
+                    <!-- <album-edit-input [data]="element.link" (tried)="getoldvalue($event)" (focusOut)='updateActive("link",element,$event)'>
+                    </album-edit-input> -->
                 </div>
                 <div class="child">
-                    <album-edit-input [data]="item.label" (tried)="getoldvalue($event)" (focusOut)='updateActive("label",item,$event)'>
-                    </album-edit-input>
+                    <mat-form-field>
+                        <input matInput (focusOut)='updateActive("label",element,$event)' [(ngModel)]="element.label" [(value)]="element.label" autocomplete="Off">
+                    </mat-form-field>
+                    <!-- <album-edit-input [data]="element.label" (tried)="getoldvalue($event)" (focusOut)='updateActive("label",element,$event)'>
+                    </album-edit-input> -->
                 </div>
                 <div class="child">
-                    <album-edit-input [data]="item.DisplayOrder" (tried)="getoldvalue($event)" (focusOut)='updateActive("DisplayOrder",item,$event)'>
-                    </album-edit-input>
+                    <mat-form-field>
+                        <input matInput (focusOut)='updateActive("DisplayOrder",element,$event)' [(ngModel)]="element.DisplayOrder" [(value)]="element.DisplayOrder" autocomplete="Off">
+                    </mat-form-field>
+                    
                 </div>
                 <div class="child">
-                    <album-edit-input [data]="item.HasSubmenu" (tried)="getoldvalue($event)" (focusOut)='updateActive("HasSubmenu",item,$event)'>
-                    </album-edit-input>
+                    <mat-form-field>
+                        <input matInput (focusOut)='updateActive("HasSubmenu",element,$event)' [(ngModel)]="element.HasSubmenu" [(value)]="element.HasSubmenu" autocomplete="Off">
+                    </mat-form-field>
+                    <!-- <album-edit-input [data]="element.HasSubmenu" (tried)="getoldvalue($event)" (focusOut)='updateActive("HasSubmenu",element,$event)'>
+                    </album-edit-input> -->
                 </div>
                 <div class="child">
-                    <album-edit-input [data]="item.IsTemplate" (tried)="getoldvalue($event)" (focusOut)='updateActive("IsTemplate",item,$event)'>
-                    </album-edit-input>
+                    <mat-form-field>
+                        <input matInput (focusOut)='updateActive("IsTemplate",element,$event)' [(ngModel)]="element.IsTemplate" [(value)]="element.IsTemplate" autocomplete="Off">
+                    </mat-form-field>
+                    <!-- <album-edit-input [data]="element.IsTemplate" (tried)="getoldvalue($event)" (focusOut)='updateActive("IsTemplate",element,$event)'>
+                    </album-edit-input> -->
                 </div>
                 <div class="child">
-                    <album-edit-input [data]="item.HomePage" (tried)="getoldvalue($event)" (focusOut)='updateActive("HomePage",item,$event)'>
-                    </album-edit-input>
+                    <mat-form-field>
+                        <input matInput (focusOut)='updateActive("HomePage",element,$event)' [(ngModel)]="element.HomePage" [(value)]="element.HomePage" autocomplete="Off">
+                    </mat-form-field>
+                    <!-- <album-edit-input [data]="element.HomePage" (tried)="getoldvalue($event)" (focusOut)='updateActive("HomePage",element,$event)'>
+                    </album-edit-input> -->
                 </div>
                 <div class="child">
-                    <album-edit-input [data]="item.Active" (tried)="getoldvalue($event)" (focusOut)='updateActive("Active",item,$event)'>
-                    </album-edit-input>
+                    <mat-form-field>
+                        <input matInput (focusOut)='updateActive("Active",element,$event)' [(ngModel)]="element.Active" [(value)]="element.Active" autocomplete="Off">
+                    </mat-form-field>
+                    <!-- <album-edit-input [data]="element.Active" (tried)="getoldvalue($event)" (focusOut)='updateActive("Active",element,$event)'>
+                    </album-edit-input> -->
                 </div>
                 <!-- <div class="child">
-                    <button [disabled]="loading" mat-mini-fab [id]="item.AlbumId" [name]="item.UpdatableName" matTooltip="DELETE"
+                    <button [disabled]="loading" mat-mini-fab [id]="element.AlbumId" [name]="element.UpdatableName" matTooltip="DELETE"
                         class="iconbutton" color="gray" #button (click)="updateActive(button)">
                  
                         <mat-icon aria-label="delete">delete</mat-icon>
