--- a/src/app/modules/studentexam/examstudentsubjectresult/examstudentsubjectresult.component.html
+++ b/src/app/modules/studentexam/examstudentsubjectresult/examstudentsubjectresult.component.html
@@ -26,7 +26,7 @@
                 </mat-form-field>
                 <mat-form-field appearance="outline">
                     <mat-label>Section</mat-label>                    
-                    <input matInput [value]="A" formControlName="searchSection" autocomplete="Off">
+                    <input matInput [value]="" formControlName="searchSection" autocomplete="Off">
                 </mat-form-field>
                 <mat-form-field appearance="outline">
                     <mat-label>Subject</mat-label>
