--- a/src/app/modules/StudentSubject/studenthome/studenthome.component.html
+++ b/src/app/modules/StudentSubject/studenthome/studenthome.component.html
@@ -5,7 +5,7 @@
 
 <app-header></app-header>
 <mat-drawer-container>
-    <mat-drawer mode="side" [opened]="openSideBar">
+    <mat-drawer mode="side">
         <app-MultiLevelMenu></app-MultiLevelMenu>
     </mat-drawer>
     <mat-drawer-content>
