--- a/src/app/modules/control/controlhome/controlhome.component.html
+++ b/src/app/modules/control/controlhome/controlhome.component.html
@@ -1,4 +1,4 @@
 <div>
-    <app-header [deviceXs]="deviceXs"></app-header>
+    <app-header></app-header>
     <router-outlet></router-outlet>
 </div>
