--- a/src/app/modules/StudentSubject/studentsubjectdashboard/studentsubjectdashboard.component.scss
+++ b/src/app/modules/StudentSubject/studentsubjectdashboard/studentsubjectdashboard.component.scss
@@ -2,7 +2,7 @@
 //     //position: absolute;
 //     margin-top: 100px;
 // }
-mat-form-field{
+mat-form-field,mat-checkbox{
     margin-right:15px;
 }
 button{
